# fastapi_baremetal

./: 01_setup_pdm_toml.sh  README.md  clear_migrations.sh  copy_project.py  pyproject.toml
migrations/: env.py
