[project]
name = "fastapi_baremetal"
version = "0.0.1"
description = "a baremetal project strucure"
authors = [
    {name = "TODO", email = "TODO@TODO.com"},
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "alembic>=1.10.2",
    "sqlalchemy==1.4.41",
    "sqlmodel>=0.0.8",
    "psycopg2-binary>=2.9.5",
    "asyncpg>=0.27.0",
    "python-dotenv>=1.0.0",
    "fastapi-async-sqlalchemy @ git+https://github.com/h0rn3t/fastapi-async-sqlalchemy.git",
    "gunicorn>=20.1.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

#[build-system]
#requires = ["pdm-backend"]
#build-backend = "pdm.backend"

[tool]
[tool.pdm]
